# hep-aid

./: .gitignore  BLSSM_scan.ipynb  BLSSM_scan.txt  HepRead.py  HepTools.py  LICENSE  LesHouches.in.cTSM  ME5_debug  Messages.out  README.m  README.md  Updates.md  cTSM_scan.ipynb  py.py  pyproject.toml  setup.cfg  setup.py  test.txt
.ipynb_checkpoints/: BLSSM_scan-checkpoint.ipynb  cTSM_scan-checkpoint.ipynb
docs/: _toc.yml  conf.py  hepaid.rst  hepaid.search.models.rst  hepaid.search.parallel.rst  hepaid.search.policy.rst  hepaid.search.rst  modules.rst
docs/_html/: .buildinfo  genindex.html  hepaid.hep.html  hepaid.html  hepaid.search.html  hepaid.search.models.html  hepaid.search.parallel.html  hepaid.search.policy.html  intro.html  markdown-notebooks.html  markdown.html  modules.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
examples/: BLSSM_scan.ipynb  HEPDataSet_test_5.p  LesHouches.in.Step  Spheno.spc.Step  creating_slha_dataset.ipynb  dict.h5  using_hepread_modules.ipynb
examples/.ipynb_checkpoints/: BLSSM_scan-checkpoint.ipynb  creating_slha_dataset-checkpoint.ipynb  using_hepread_modules-checkpoint.ipynb
examples/SLHA_BLSSM/: test
examples/SPhenoBLSSM_input/: test_2  test_newfile
hepaid/: .test.py.swp  _version.py  data.py  hep_tools.yaml  hepdata.py  hepread.py  heptools.py  stack.py  test.py  testhr.py  utils.py
hepaid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hepaid/testdir/: fort.10
notes/: HiggsBounds.md  HiggsSignals.md  SPheno.md
src/: HepTools.py
src/hepaid.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
test/: madgraph.py
(+99 files in other folders)
