[metadata]
name = hepaid
version = 2.0
description = Modules for pythonic interaction with hep tools
author = Mauricio A. Diaz

[options]
package_dir =
    = src
packages = find:
include_package_data = true
install_requires =
    # Your dependencies here

[options.packages.find]
where = src
exclude=
	notes*
    files*
    test*
    examples*

