[metadata]
name = hepaid
version = 2.0
description = Modules for pythonic interaction with hep tools
author = Mauricio A. Diaz

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = true
install_requires =
    numpy==1.26.4
    pandas==2.2.1
    scipy==1.12.0
    matplotlib==3.8.3
    omegaconf==2.3.0
    torch==2.1.2
    optuna==3.5.0
    gpytorch==1.11
    botorch==0.9.5
    seaborn==0.13.2
    rich==13.7.0
    scikit-optimize==0.9.0
    scikit-learn==1.4.1.post1
    ray==2.9.3
[options.packages.find]
where = src
exclude=
    files*
    examples*
    docs*

