[metadata]
name = hepaid
version = 2.0
description = Modules for pythonic interaction with hep tools
author = Mauricio A. Diaz

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = true
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    omegaconf
    torch
    optuna
    gpytorch
    botorch
    seaborn
    rich
    scikit-optimize
    scikit-learn
    ray
    click
[options.packages.find]
where = src
exclude=
    files*
    examples*
    docs*

[options.entry_points]
console_scripts =
    hepaid = hepaid.cli:cli
